added loggging
